Fix bug: apply collapse class

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -43,6 +43,7 @@
 }
 
 .image-loader {
+  @apply collapse collapse-arrow;
   @apply bg-base-100 border border-base-content border-opacity-20 rounded-box;
 }
 
